[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbctl"
version = "0.6.1"
description = "mbctl is a Man8S container orchestration tool built on nerdctl/containerd, providing container lifecycle and networking workflows while proxying unrecognized commands to nerdctl."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Neboer", email = "rubinposter@gmail.com" }
]
maintainers = [
    { name = "UntilSoftware", email = "UntilSoftware@mail.neboer.site" }
]

keywords = [
    "systemd-nspawn",
    "container",
    "orchestration",
    "linux",
    "system-tools",
    "cli"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]

license = { text = "Apache-2.0" }

dependencies = [
    "pyyaml",
    "pydantic",
    "typer",
    "prettytable",
]

[project.urls]
Homepage = "https://www.neboer.site"
Source = "https://github.com/Neboer/Man8S-CTR"
Issues = "https://github.com/Neboer/Man8S-CTR/issues"
Documentation = "https://www.neboer.site/docs/mbctl"

[project.scripts]
mbctl = "mbctl.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
